--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
+    <link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/1863/PNG/512/games_119081.png" type="image/x-icon">
 </head>
 <body>
     <h1>🙃 Hello, Dev Web!</h1>
